small changes made to courses and projects

--- a/courses.html
+++ b/courses.html
@@ -62,17 +62,16 @@
         <p>Total score: 40/45</p>
 
         <div class="w3-container w3-teal"> 
-            <h2>University of Maryland - Major: Computer Science</h2>
+            <h2>University of Maryland - Major: Computer Science (Machine Learning) & Math</h2>
         </div>
         <p>CMSC131: Object Oriented Programming 1</p>
         <p>CMSC132: Object Oriented Programming 2</p>
         <p>CMSC250: Discrete Structures</p>
-        <p>MATH141: Calculus 2</p>
+        <p>CMSC216: Introduction to Computer Systems</p>
         <p>MATH240: Linear Algebra</p>
-        <p>ANTH240: Introduction to Archaeology</p>
+        <p>MATH246: Differential Equations</p>
         <p>BSGC 101: Globalization</p>        
         <p>BSGC102: Global Issues</p>
-        <p>ENGL101: Academic Writing</p>
 
         <div class="w3-container w3-teal"> 
             <h2>Other:</h2>
