--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
         h1{
             font-family: "Georgia", "Times New Roman", "Serif";
             color: white;
-            font-weight: bold;
+            font-weight: inherit;
             text-align: center;
         }
         h3{
@@ -55,6 +55,10 @@
         <p>This application was written in Java and provides a GUI of updated information from various sports
         by collecting data from their official websites
         </p>
+        <div></div>
+        
+        &nbsp;
+        <p>Of course, I also made this website :)</p>
         <a href="https://github.com/mukundshankar-dev">All code can be found on my GitHub</a>
     </div>
 
