removed testing features from index page

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <a href="https://www.linkedin.com/in/mukund-shankar-375961194"><li>LinkedIn</li></a>
         <a href="courses.html"><li>Coursework</li></a>
         <a href="projects.html"><li>Short descriptions of my personal projects</li></a>
-        <p id="sampletext">sampletext</p>
-        <button id="button1" onclick="myFunction()">Click me!</button>
+        <!-- <p id="sampletext">sampletext</p> -->
+        <!-- <button id="button1" onclick="myFunction()">Click me!</button> -->
     </ul>
 </div>
 
-<script src="indexjs.js"></script>
+<!-- <script src="indexjs.js"></script> -->
 
 </body>
 </html>
